[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/Options.gd" type="Script" id=1]
[ext_resource path="res://gui/font.tres" type="DynamicFont" id=3]

[node name="Options" type="CenterContainer"]
margin_left = 541.0
margin_right = 1360.0
margin_bottom = 828.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="."]
margin_left = 57.0
margin_top = 320.0
margin_right = 761.0
margin_bottom = 508.0
columns = 2

[node name="VolumeLabel" type="Label" parent="Grid"]
margin_top = 43.0
margin_right = 350.0
margin_bottom = 57.0
text = "Volume"

[node name="Volume" type="HSlider" parent="Grid"]
margin_left = 354.0
margin_right = 704.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )

[node name="ActionButton" type="Button" parent="Grid"]
margin_top = 104.0
margin_right = 350.0
margin_bottom = 188.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Apply Changes"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Grid"]
margin_left = 354.0
margin_top = 104.0
margin_right = 704.0
margin_bottom = 188.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Back"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="draw" from="." to="." method="_on_redraw"]
[connection signal="pressed" from="Grid/ActionButton" to="." method="_apply_changes"]
